force-app/main/default/objects/S2V_Trigger_Handler__c/S2V_Trigger_Handler__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>S2V Trigger Handler</label>
</CustomObject>