force-app/main/default/objects/S2V_Trigger_Handler__c/fields/S2VRestrictingCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>S2VRestrictingCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2VRestrictingCampaignMember</label>
    <type>Checkbox</type>
</CustomField>