force-app/main/default/objects/S2V_Trigger_Handler__c/fields/S2VTimeZoneContact__c.field-meta.xml
<CustomField>
    <fullName>S2VTimeZoneContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2VTimeZoneContact</label>
    <type>Checkbox</type>
</CustomField>