force-app/main/default/objects/S2V_Trigger_Handler__c/fields/S2VTimeZoneLead__c.field-meta.xml
<CustomField>
    <fullName>S2VTimeZoneLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2VTimeZoneLead</label>
    <type>Checkbox</type>
</CustomField>