force-app/main/default/objects/S2V_Trigger_Handler__c/fields/S2VTimeZoneOpp__c.field-meta.xml
<CustomField>
    <fullName>S2VTimeZoneOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2VTimeZoneOpp</label>
    <type>Checkbox</type>
</CustomField>