force-app/main/default/objects/S2V_Trigger_Handler__c/fields/S2VTimeZoneTask__c.field-meta.xml
<CustomField>
    <fullName>S2VTimeZoneTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S2VTimeZoneTask</label>
    <type>Checkbox</type>
</CustomField>