force-app/main/default/objects/S2V_Trigger_Handler__c/fields/SameRecordNumber__c.field-meta.xml
<CustomField>
    <fullName>SameRecordNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SameRecordNumber</label>
    <type>Checkbox</type>
</CustomField>