force-app/main/default/objects/S2V_Trigger_Handler__c/fields/SendVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>SendVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendVoiceMail</label>
    <type>Checkbox</type>
</CustomField>